--- a/Dabi Haile.html
+++ b/Dabi Haile.html
@@ -86,7 +86,7 @@
             <form action="maileto:dabihaile93@gmail.com">
                 <input type="text" placeholder="Enter your name" required> 
                 <input type="text" placeholder="Enter your email" required> 
-                <textarea name="" id="" cols="23.9" rows="10"></textarea>
+                <textarea cols="23.9" rows="10"></textarea>
                 <p><input type="submit" value="submet" class="submit"></p>
             </form>
         </div>
@@ -97,6 +97,6 @@
             <p style="text-align: center;">Copyright &copy; 2015 E.C | All right reserved | Designed by <span style="color: #fd4776;"> Dabi</p>
         </div>
     </footer>
-    
+    <!----My Portfolio-->>
 </body>
 </html>
